# HackAssembler

./: .gitmodules  Assembler.h  CMakeLists.txt  CMakeSettings.json  VMTranslator.h  main.cpp
applications/AssemblerCLI/: main.cpp
applications/CompilerCLI/: main.cpp
delete/: Assembler.cpp  Assembler.h  Utilities.cpp  Utilities.h  VMTranslator.cpp  VMTranslator.h  lang.txt  main.cpp
libraries/Assembler/: Assembler.cpp  CMakeLists.txt  Utilities.cpp  Utilities.h  VMTranslator.cpp  VMTranslator.h
libraries/Assembler/headers/: Assembler.h  Utilities.h  VMTranslator.h
libraries/Compiler/: CMakeLists.txt  CompilationEngine.cpp  CompilationEngine.h  SymbolTable.cpp  SymbolTable.h  Tokenizer.cpp  Tokenizer.h  VMWriter.h
libraries/Utilities/: CMakeLists.txt  Utilities.cpp  Utilities.h
tests/unittests/: TestAssembler.cpp  TestCompiler.cpp  TestCompilerXML.cpp  TestExample.cpp  TestUtilities.cpp  TestVMTranslator.cpp
